objects/PC_OcrResult__c.object
<CustomObject>
    <description>Stores information regarding the resulting record created for a document after optical character recognition (OCR) has been performed</description>
    <fields>
        <fullName>PC_OcrQueue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCR Queue</label>
        <referenceTo>PC_OcrQueue__c</referenceTo>
        <relationshipLabel>OCR Results</relationshipLabel>
        <relationshipName>OCR_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_OcrResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCR Response</label>
        <referenceTo>PC_OcrResponse__c</referenceTo>
        <relationshipLabel>OCR Results</relationshipLabel>
        <relationshipName>OCR_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ResultDetails__c</fullName>
        <description>Detailed information about the resulting record</description>
        <label>Result Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_ResultStatus__c</fullName>
        <description>Status of the resulting record</description>
        <label>Result Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ResultingRecordId__c</fullName>
        <description>Id of the resulting record created</description>
        <label>Resulting Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OCR Result</label>
    <nameField>
        <displayFormat>OR-{00000000}</displayFormat>
        <label>OCR Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCR Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>